--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Acta</title>
 </head>
 <body>
-    <form method="post" action="./acta.php">
+    <form method="put" action="./acta.php">
         <label for="nombre">Nombre</label>
         <input type="text" name="nombre" placeholder="escribe tu nombre">
         <button type="submit">enviar</button>
